# CEC2017-BlackBox-Ranking

./: .gitignore  CMakeLists.txt  Makefile  README.md  bartosz_credentials.json  credentials.json  main.cc  main.cpp  zpr_example_table.sql  zpr_users_table.sql
app/: main.cc
cec_codes/: cec17_test_func.cpp  cec17_test_func.h  main.cpp
example_client/: client.cc
headers/: ApiKeyManager.h  DatabaseManager.h  FunctionManager.h  HttpRequestHandler.h  JsonParser.h
lib/: ApiKeyManager.cc  ApiKeyManager.h  DatabaseManager.cc  DatabaseManager.h  FunctionManager.cc  FunctionManager.h  HttpRequestHandler.cc  HttpRequestHandler.h  JsonParser.cc  JsonParser.h  JsonParser.hpp  MailManager.cc  MailManager.h
lib/headers/: ApiKeyManager.h  DatabaseManager.h  FunctionManager.h  HttpRequestHandler.h  JsonParser.h
lib/src/: ApiKeyManager.cc  DatabaseManager.cc  FunctionManager.cc  HttpRequestHandler.cc  JsonParser.cc
src/: ApiKeyManager.cc  DatabaseManager.cc  FunctionManager.cc  HttpRequestHandler.cc  JsonParser.cc  db.cpp  db.h  hash.cpp  hash.h  mail.cpp  mail.h  server.cpp  server.h
test/: ApiKeyManagerTest.cc  FunctionManagerTest.cc  JsonParserTest.cc  MailManagerTest.cc
tests/: CMakeLists.txt  testFiles.cc  test_your_source_files.cc
